src/css/App.scss
/* ... */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  min-height: 0;
  min-width: 0;
  font-family: inherit;
}


body{
  min-height: 100vh;
  display: block;
  font-family: 'Roboto Mono', monospace;

  .body-bg{    
    position: fixed;
    top: -25vh;
    left: -25vw;
    width: 150vw;
    height: 150vh;
    z-index: -1;
    
    .-default{
      background: var(--bg);
      opacity: 1;
    }
    
    div{
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }

  #header{
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;
    width: 100%;
    height: 8em;
    padding: 0 1em 5em;
    
    .header-bg{
      // background-attachment: fixed;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      z-index: -1;
      
      .-default{
        background: linear-gradient(180deg,var(--bg) 3em, rgba(var(--bg-rgb),0));
        opacity: 1;
      }
      
      div{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        
      }
      
    }

    .header-container{
      display: flex;
      align-items: center;
      justify-content: space-between;
      height: 3em;
      max-width: 80em;
      margin: 0 auto;
      
      .logo{
        word-spacing: 1mm;
        font-size: 1.2em;
        font-weight: 700;
        color: var(--purple);
      }
      
      .header-nav-button {
        flex: 0 0 auto;
        width: 3rem;
        height: 3rem;
        display: none;
        flex-flow: column nowrap;
        align-items: center;
        justify-content: space-between;
        padding: 0.8rem;
        margin-right: -1rem;
        background: none;
        border: 0;
        
        .dots {
          flex: 0 0 auto;
          position: relative;
          width: 0.25rem;
          height: 0.25rem;
          border-radius: 0.25rem;
          background: var(--header-link);
          transition: all .4s cubic-bezier(.19,1,.22,1);
        }
      }


      .header-nav{
        display: flex;
        align-items: center;
        
        ul{
          display: flex;
          align-items: center;
          list-style: none;
          
          li{
            list-style: none;
            flex: 0 0 auto;
            margin-left: 1em;
            
            .active{
              opacity: .5;
              cursor: default;
            }
            
            a{
              height: 2em;
              display: flex;
              align-items: center;
              color: var(--header-link);
              transition: color .4s ease-out;
              line-height: 1;
              
              svg{
                display: block;
                width: 1.2em;
                height: 1.2em;
                fill: var(--purple);
                position: relative;
                top: 2px;
                transition: fill .4s ease-out;
              }
              
              svg:hover{
                fill: var(--header-link-hover-icon);
              }
            }
            
            a:hover{
              color: var(--header-link-hover);
            }
            
            .active:hover{
              color: var(--header-link-hover);
            }
          }
        }
      }
    }
  }
  
  .wrapper{
    position: relative;
    z-index: 1;
    padding-bottom: 20vh;
    min-height: 100vh;
    transition: opacity .5s linear;
    
    section{
      min-height: 100vh;
      display: block;
      
      .title-container{
        position: fixed;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        perspective: 900px;
        perspective-origin: 50% 50vh;
        padding: 0 1em 0 25vw;
        display: flex;
        flex-flow: column nowrap;
        align-items: flex-start;
        justify-content: center;
        margin-right: 0;
        padding-right: 0;
        
        .title{
          margin-right: 0;
          padding-right: 0;
          display: block;
          opacity: 0;
          color: var(--light);
          font-size: 4em;
          font-weight: 700;
          word-spacing: -.1em;
          letter-spacing: -.05em;
          word-break: break-word;
          -webkit-hyphens: auto;
          -ms-hyphens: auto;
          hyphens: auto;
          
          .param{
            font-weight: 400;
            letter-spacing: -2px;
            color: var(--purple);
          }
        }
      }   
    
      .footer-bg{
        // background-attachment: fixed;
        position: absolute;
        top: 90vh;
        left: 90vh;
        width: 100%;
        height: 100%;
        z-index: -1;

        .-iDefault{
          background: linear-gradient(0deg,var(--bg) 3em, rgba(var(--bg-rgb),0));
          opacity: 1;
        }
      }

      .static-container{
        padding: calc(50vh - 3.5em) 0 0;
        margin: 0 25vw;
        min-height: 100vh;
        perspective: 900px;
        perspective-origin: 50% 50vh;
          
          .func{
            color: var(--purple);
          }
        
        .std{
          // font-size: 0.9em;
          // max-width: 42em;
          // line-height: 1.5;
          // color: var(--std-color);
          // word-break: break-word;
          // -webkit-hyphens: none;
          // hyphens: none;
          // font-size: 1.2em;

          p{
            margin-bottom: 1em;
            width: 85vw;
            // margin-right: -25vw;
          }
        }
      }
      
      
    }
  }
}
/* ... */

